add new comments and photo

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -24,7 +24,7 @@
             
                 <div class="slide-p">
                     <p>
-                        Viktor, City
+                        Viktor, Kryvyi Rih
                     </p>
                 </div>
             </div>
@@ -48,7 +48,7 @@
             </div>
             
             <div class="reviews__slide">
-                <img class="reviews__img" src="./images/mobile/Display-x1/SAVE_20210920_165639.jpg" alt="photo">
+                <img class="reviews__img" src="./images/reviews/dima-min.jpg" alt="photo">
                 <div class="container-comment">
                     <article class="comment">То что вы читаете, было не без труда создано мной</article>
                     <div class="gradient">
@@ -113,14 +113,48 @@
             </div>
 
             <div class="reviews__slide">
-                <img class="reviews__img" src="./images/testimonials.jpg" alt="photo">
+                <img class="reviews__img" src="./images/reviews/leonid-min.jpg" alt="photo">
                 <div class="container-comment">
-                    <article class="comment">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem.</article>
+                    <article class="comment">Сделал секцию advantages, modal-footer, Пользовался Js для модалки.</article>
+                    <div class="gradient">
+                    </div>
                 </div>
 
                 <div class="slide-p">
                     <p>
-                        Emily, Los Angeles
+                        Leonid, Los Angeles
+                    </p>
+                </div>
+            </div>
+
+            <div class="reviews__slide">
+                <img class="reviews__img" src="./images/reviews/romana-min.jpg" alt="photo">
+                <div class="container-comment">
+                    <article class="comment">1,5 роки назад я була на керівній посаді в страховій компанії, зараз я мама і дружина, а менше ніж через 6 місяців я
+                    стану Full stack develovper. Розробляла секцію хедер та герой у цьому проекті. Дякую усій команді за гарну роботу.</article>
+                    <div class="gradient">
+                    </div>
+                </div>
+
+                <div class="slide-p">
+                    <p>
+                        Романна Ясінська, Львів
+                    </p>
+                </div>
+            </div>
+
+            <div class="reviews__slide">
+                <img class="reviews__img" src="./images/reviews/valentina-min.jpg" alt="photo">
+                <div class="container-comment">
+                    <article class="comment">Бородай Валентина с маленького города Покров в Днепропетровской обл, в котором нет даже ни одной веб-студии)) оператор
+                    АЗС. Благодарность всем членам команды за терпение и помощь)</article>
+                    <div class="gradient">
+                    </div>
+                </div>
+
+                <div class="slide-p">
+                    <p>
+                        Валентина, Покров
                     </p>
                 </div>
             </div>
@@ -129,32 +163,8 @@
                 <img class="reviews__img" src="./images/testimonials.jpg" alt="photo">
                 <div class="container-comment">
                     <article class="comment">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem.</article>
-                </div>
-
-                <div class="slide-p">
-                    <p>
-                        Emily, Los Angeles
-                    </p>
-                </div>
-            </div>
-
-            <div class="reviews__slide">
-                <img class="reviews__img" src="./images/testimonials.jpg" alt="photo">
-                <div class="container-comment">
-                    <article class="comment">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem.</article>
-                </div>
-
-                <div class="slide-p">
-                    <p>
-                        Emily, Los Angeles
-                    </p>
-                </div>
-            </div>
-
-            <div class="reviews__slide">
-                <img class="reviews__img" src="./images/testimonials.jpg" alt="photo">
-                <div class="container-comment">
-                    <article class="comment">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem.</article>
+                    <div class="gradient">
+                    </div>
                 </div>
 
                 <div class="slide-p">
