--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,10 +1,47 @@
 <section class="try__6">
-    <div class="container-gallery">
-        <picture>
+<div class="container-gallery container ">
+       <!-- <picture>-->
             <!-- <source  srcset="images/mobile/Display-x1/mobi-gallery-x1.jpg 1x, images/mobile/Display-x1/mobi-gallery-x2.jpg 2x" media="(max-width: 767px)"> -->
             <!-- <source  srcset=" 1x, .jpg 2x" media="(max-width: 1199px)">
             <source  srcset=".jpg 1x, .jpg 2x" media="(min-width: 1200px)"> -->
-            <img src="./images/mobile/Display-x1/mobi-gallery-x1.jpg" width="364" height="122" alt="галерея" class="gallery-main-img">
-        </picture>
+           <!-- <img src="" width="364" height="122" alt="галерея" class="gallery-main-img">
+        </picture> -->
+       
+
+        <div class="gallery-group">
+            <div class="gallery-group__item">
+                <picture>
+                    <source  srcset="" media="(max-width: 767px)"> 
+                    <source  srcset="./images/gallery/x1/cream1-1280-720.jpg x1" media="(max-width: 1199px)">
+                    <source  srcset="" media="(min-width: 1200px)"> 
+                    <img src="./images/gallery/x1/cream1-1280-720.jpg" width="1280" height="" alt="галерея" class="gallery-main-img1">
+                </picture>
+            </div>
+            <div class="gallery-group__item">
+                <picture>
+                    <source  srcset="" media="(max-width: 767px)"> 
+                    <source  srcset="./images/gallery/x1/cream2-569.jpg x1" media="(max-width: 1199px)">
+                    <source  srcset="" media="(min-width: 1200px)"> 
+                    <img src="./images/gallery/x1/cream2-569.jpg" width="569" height="" alt="галерея" class="gallery-main-img1">
+                </picture>
+            </div>    
+        </div>
+        <div class="gallery-group__item">
+            <picture>
+                <source  srcset="" media="(max-width: 767px)"> 
+                <source  srcset="./images/gallery/x1/cream18-1280.jpg x1" media="(max-width: 1199px)">
+                <source  srcset="" media="(min-width: 1200px)"> 
+                <img src="./images/gallery/x1/cream18-1280.jpg" width="1280" height="" alt="галерея" class="gallery-main-img1">
+            </picture>
+        </div>
+        <div class="gallery-group__item">
+            <picture>
+                <source  srcset="" media="(max-width: 767px)"> 
+                <source  srcset="./images/gallery/x1/cream2-569.jpg x1" media="(max-width: 1199px)">
+                <source  srcset="" media="(min-width: 1200px)"> 
+                <img src="./images/gallery/x1/cream2-569.jpg" width="569" height="" alt="галерея" class="gallery-main-img1">
+            </picture>
+        </div>    
     </div>
+</div>
 </section>
