--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -7,14 +7,39 @@
 .container-gallery {
     display: flex;
     justify-content: center;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
     align-items: center;
 }
 .gallery-main-img {
     display: block;
     max-width: 100%;
+}   
+
+/***masonry-styles *****************************/////////////////////////////
+
+.gallery-group {    
+    column-gap: 16px;
+    margin: 0px 10px; 
+    @media only screen and (max-width: 479px) {
+        column-count: 1;
+    }
+    @media only screen and (min-width: 768px) and (max-width: 767px) {
+        column-count: 2;
+    }
+    @media only screen and (min-width: 768px) and (max-width: 1199px) {
+        column-count: 3;
+    }
+    @media only screen and (min-width: 1200px) {
+        column-count: 4;
+    }
 }
+.gallery-group__item {
+    overflow: hidden;
+   
+    margin: 5px 0;
+    border: 5px solid var(--border-button1);
+    border-radius: 20px;
+    display: inline-block;
+
+}
+
+
