--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -122,7 +122,7 @@
 
                 <div class="slide-p">
                     <p>
-                        Leonid, Los Angeles
+                        Leonid, Zaporizhzhia
                     </p>
                 </div>
             </div>
