--- a/src/partials/main-modal.html
+++ b/src/partials/main-modal.html
@@ -27,7 +27,7 @@
             <Label class="modal-form__label">
                 <div class="form-label__container"><svg class="modal-form__icon modal-icon" width="18" height="18">
                         <use href="./images/sprite.svg#icon-email-black-18dp-1"></use>
-                    </svg> </svg><span class="form-label-name">Email</span>
+                    </svg><span class="form-label-name">Email</span>
                     <span class="modal-form__container-input"><input type="email" mame="email"
                             class="modal-form__input"  minlength="3" placeholder=" "></span>
                 </div>
@@ -42,12 +42,12 @@
                         class="modal-form__checkbox-hidden visually-hidden">
                     <span class="modal-form__checkbox-icon modal-icon">
                     </span>
-                    <div class="box-text">   
+                    <span class="box-text">   
                         I agree to the newsletter and accept  
                         <a href="" class="modal-form__link link">
                             Terms of an agreement
                         </a>
-                    </div>
+                    </span>
                 </span> 
             </label>
             <button type="submit" class="modal__button-submit main-button">Submit</button>
