--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,4 @@
-<section class="reviews">
+<section class="reviews" id="reviews">
     <div class="reviews__comment container">
 
         <div class="reviews__slides">
