--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -107,7 +107,7 @@
 
                 <div class="slide-p">
                     <p>
-                        Светлана, Киев
+                        Светлана, Никополь
                     </p>
                 </div>
             </div>
