--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,4 @@
-<section class="reviews">
+<section class="reviews" id="reviews">
     <div class="reviews__comment container">
 
         <div class="reviews__slides">
@@ -107,7 +107,7 @@
 
                 <div class="slide-p">
                     <p>
-                        Светлана, Киев
+                        Светлана, Никополь
                     </p>
                 </div>
             </div>
@@ -122,7 +122,7 @@
 
                 <div class="slide-p">
                     <p>
-                        Leonid, Los Angeles
+                        Леонид, Запорожье
                     </p>
                 </div>
             </div>
