--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about">
+<section class="about" id="about">
     <div class="container about__container">
         <label class="about__pre-text">tradition and love</label>
         <h2 class="about__title" >how it's made?</h2>        
@@ -34,7 +34,8 @@
             </li>
         </ul>           
     </div>
-    <div class="is-hidden modal-about" data-aboutmodal>
+    <div class="is-hidden backdrop" data-aboutmodal>
+    <div class="modal-about" >
         <button type="button" class="modal-about__btn-close" data-aboutmodal-close>
             <svg class="modal-about__btn-close-icon" width="14" height="14">
                 <use href="./images/sprite.svg#icon-close-black-18dp-2-1-1"></use>
@@ -54,5 +55,6 @@
             </svg>
         </button>
         </form>        
+    </div>
     </div>
 </section>
