--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -202,11 +202,30 @@
   @media screen and(max-width:480px) {
     width: 100%;
   }
-  // @media screen and(min-width:1200px) {
-  //   width: 600px;
-  //   ;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  visibility: visible;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  // &.is-hidden {
+  //   visibility: hidden;
+  //   pointer-events: none;
+  //   opacity: 0;
   // }
 }
+
+.backdrop.is-hidden .modal-about {
+  transform: translate(-50%, -50%) scaleX(0.5);
+}
+
 .modal-about-form {
   margin-top: auto;
   margin-left: auto;
@@ -308,7 +327,4 @@
 .modal-about-form-field__icon {
   align-items: center;
   fill: var(--btn-secondary-bg-color);
-}
-.backdrop.is-hidden .modal-about {
-  transform: translate(-50%, -50%) scaleX(1.1);
 }
