--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -215,11 +215,11 @@
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  // &.is-hidden {
-  //   visibility: hidden;
-  //   pointer-events: none;
-  //   opacity: 0;
-  // }
+  &.is-hidden {
+    visibility: hidden;
+    pointer-events: none;
+    opacity: 0;
+  }
 }
 
 .backdrop.is-hidden .modal-about {
