--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -182,49 +182,20 @@
 }
 
 .modal-about {
-  position: fixed;
   display: flex;
   flex-direction: column;
-  // position: absolute;
-  background-color: var(--mobile-menu-bg-color);
-  top: 50%;
-  left: 50%;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  opacity: 1;
-  width: 450px;
-  height: 100%;
-  z-index: 9;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 20px;
-  transform: scale(1) translate(-50%, -50%);
+  
+  
   padding: 50px 30px;
-  @media screen and(max-width:480px) {
-    width: 100%;
+  @media screen and (min-width:480px) {
+    width: 450px;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
   }
 }
 
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 1;
-  visibility: visible;
-  background-color: rgba(0, 0, 0, 0.2);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &.is-hidden {
-    visibility: hidden;
-    pointer-events: none;
-    opacity: 0;
-  }
-}
-
-.backdrop.is-hidden .modal-about {
-  transform: translate(-50%, -50%) scaleX(0.5);
-}
 
 .modal-about-form {
   margin-top: auto;
@@ -274,7 +245,7 @@
   align-items: center;
   color: var(--secondary-text-color);
   margin-top: 30px;
-  // margin-bottom: 25px;
+  margin-bottom: 25px;
 }
 
 .modal-about-form-field__label {
@@ -305,25 +276,40 @@
 }
 
 .form3-btn {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.13;
   display: block;
   margin: 0 auto;
-  width: 270px;
-  height: 50px;
-  background-color: var(--btn-bg-color);
-  border-radius: 15px;
+  background-color: var(--secondary--title-color);
+  height: 44px;
+  border-radius: 22px;
+  width: 161px;
+  border: none;
   color: var(--main-title-color);
-  border: 1px solid var(--border-menu);
-  cursor: pointer;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
   &:hover,
   &:focus {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    background: var(--icons-bg-hover-color);
   }
+  @media screen and (min-width: 768px) {
+    .franchise-btn {
+      width: 174px;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    .franchise-btn {
+      width: 180px;
+    }
+  
 }
+ 
+  
 
+
+}
 .modal-about-form-field__icon {
   align-items: center;
   fill: var(--btn-secondary-bg-color);
