--- a/src/sass/_backdrop.scss
+++ b/src/sass/_backdrop.scss
@@ -14,6 +14,7 @@
     transition-timing-function: var(--timing-function);
     cursor: pointer;
     overflow: hidden;
+    overflow-y: scroll;
     &.is-hidden {
       opacity: 0;
       visibility: hidden;
