--- a/src/sass/_modal-location.scss
+++ b/src/sass/_modal-location.scss
@@ -25,7 +25,10 @@ body.scroll{
 }
 .modal__view{
     position: relative;
-    // height: 100%;
+    border-radius: 20px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+    height: auto;
     background-image:url(../images/desktop/display-x1/desktop-spray-x1.png), linear-gradient(229.99deg, #ffcbd8 -26%, #fd7796 145%);
     background-size: cover;
     background-repeat: no-repeat;
