--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,6 +1,8 @@
-<section class="section-contacts contacts">
-    <div class="container ">
-        <h2 class="visibility-title">Contacts</h2>
+
+
+<section class="section-contacts" id="contacts">
+    <div class="container">
+        <h2 class="visually-hidden">Contacts</h2>
         <ul class="contacts-list">
             <li class="contacts-list_card list">
                 <p class="contacts-list_point">cafe</p>
@@ -81,14 +83,14 @@
                 </ul>
             </li>
         </ul>
-        <div class="contacts-btn" >
-            <button class="locations-btn" type="button" data-location-open>Our Locations
-                <svg class="btn-icon" width="4" height="8">
+        <div class="contacts-btn">
+            <button data-location-open class="locations-btn" type="button">Our Locations
+                <svg class="btn-icon" width="10" height="10">
                     <use href="./images/sprite.svg#icon-next"></use>
                 </svg>
             </button>
             <button class="franchise-btn" type="button" data-footermodal-open>Franchise
-                <svg class="btn-icons" width="4" height="8">
+                <svg class="btn-icons" width="10" height="10">
                     <use href="./images/sprite.svg#icon-next"></use>
                 </svg>
             </button>
