bug-fix-product
добавлено id секции продукты, исправлены картинки, изправлены заголовки

--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -16,16 +16,15 @@
 
   margin-bottom: 15px;
 }
-@media screen and (max-width: 767px){
-  .products-list__text--tablet{
-    display:none;
+@media screen and (max-width: 767px) {
+  .products-list__text--tablet {
+    display: none;
   }
 }
-@media screen and (min-width: 768px){
-   .products-list__text--mobile{
-    display:none;
-  }  
-
+@media screen and (min-width: 768px) {
+  .products-list__text--mobile {
+    display: none;
+  }
 }
 .products__heading {
   font-family: Titan One;
@@ -38,11 +37,13 @@
   color: var(--main-title-color);
 
   margin-bottom: 144px;
-  @media screen and (min-width: 768px){
+  @media screen and (min-width: 768px) {
     margin-bottom: 150px;
+    font-size: 48px;
   }
-  @media screen and (min-width: 1200px){
+  @media screen and (min-width: 1200px) {
     margin-bottom: 259px;
+    font-size: 58px;
   }
 }
 .products-list {
@@ -54,10 +55,10 @@
   @media screen and (min-width: 768px) {
     flex-direction: row;
     justify-content: center;
-    margin-left:-20px;
+    margin-left: -20px;
   }
   @media screen and (min-width: 768px) {
-    margin-left:-23px;
+    margin-left: -23px;
   }
 }
 .products-list__products-item {
@@ -68,18 +69,19 @@
   width: 280px;
   height: 485px;
   border-radius: 24px;
-  @media screen and (min-width:768px){
+  @media screen and (min-width: 768px) {
     width: 220px;
-    height:485px;}
-  @media screen and (min-width:1200px){
-    height:525px;
+    height: 485px;
+  }
+  @media screen and (min-width: 1200px) {
+    height: 525px;
   }
   &::before {
     position: absolute;
     content: '';
     top: 214px;
-    left:50%;
-    transform: translate(-50%,  0); 
+    left: 50%;
+    transform: translate(-50%, 0);
     width: 26px;
     height: 6px;
     background-image: url(../images/png/points.png);
@@ -97,12 +99,12 @@
       margin-bottom: 0px;
     }
   }
-  @media screen and (min-width: 768px){
-    flex-basis: calc(100%/3 - 20px);
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 3 - 20px);
     margin-left: 20px;
   }
-  @media screen and (min-width: 1200px){
-    flex-basis: calc(100%/3 - 20px);
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 3 - 20px);
     margin-left: 23px;
   }
 }
@@ -138,19 +140,19 @@
 
   color: var(--secondary--title-color);
   margin-bottom: 30px;
-  @media screen and (min-width: 768px ) {
+  @media screen and (min-width: 768px) {
     margin-bottom: 40px;
-}
+  }
 }
 .products-list__image {
   display: block;
   margin: -113px auto 0px auto;
-  @media screen and (min-width: 768px ) {
+  @media screen and (min-width: 768px) {
     height: 233px;
     width: 220px;
     margin: -102px auto 0px auto;
-}
-  @media screen and (min-width: 1200px){
+  }
+  @media screen and (min-width: 1200px) {
     height: 335px;
     width: 335px;
     margin: -210px auto 0px auto;
@@ -160,17 +162,15 @@
 .products-list__description {
   display: block;
   padding: 22px 40px 41px 40px;
-  text-align:center;
-  @media screen and (min-width: 768px ) {
+  text-align: center;
+  @media screen and (min-width: 768px) {
     padding: 30px 11px 40px 11px;
-}
-  @media screen and (min-width: 1200px){
+  }
+  @media screen and (min-width: 1200px) {
     height: 335px;
     padding: 38px 44px 50px 44px;
   }
 }
-
-
 
 .products-list__heading {
   font-family: Titan One;
@@ -185,11 +185,9 @@
 
   color: var(--secondary--title-color);
   margin-bottom: 66px;
-  @media screen and (min-width: 1200px){
+  @media screen and (min-width: 1200px) {
     margin-bottom: 70px;
   }
-  
-  
 }
 
 .products-list__button {
@@ -199,9 +197,8 @@
   height: 40px;
   border: none;
 
-  margin-left:auto;
-  margin-right:auto;
-  
+  margin-left: auto;
+  margin-right: auto;
 
   display: flex;
   align-items: center;
