--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class="products container">
+<section id="products" class="products container">
     <p class="products__text">100% natural</p>
     <h2 class="products__heading">products</h2>
     <ul class="products-list list">
@@ -10,10 +10,10 @@
                 <source srcset="./images/tablet/display-x1/tablet-icecream1-x1.png 1x, 
                 ./images/tablet/display-2x/tablet-icecream1-x2.png 2x"
                 media="(min-width:768px)" type="image/png"/>       
-                <source srcset="./images/mobile/Display-x1/mobile-icecream1-x1.png 1x, 
-                ./images/mobile/Display-x2/mobile-icecream1-x2.png 2x" 
+                <source srcset="./images/mobile/Display-x1/mobi-icecream1-x1.png 1x, 
+                ./images/mobile/Display-x2/mobi-icecream1-x2.png 2x" 
                 media="(max-width:767px)" type="image/png"/>
-                <img class="products-list__image" src="./images/mobile/Display-x1/mobile-icecream1-x1.png" width="249" height="252" alt="ice cream">
+                <img class="products-list__image" src="./images/mobile/Display-x1/mobi-icecream1-x1.png" width="249" height="252" alt="ice cream">
             </picture>
             <div class="products-list__description">
                 <h3 class="products-list__heading">ice cream</h3>
@@ -46,10 +46,10 @@
                 <source srcset="./images/tablet/display-x1/tablet-icecream2-x1.png 1x, 
                 ./images/tablet/display-2x/tablet-icecream2-x2.png 2x"
                 media="(min-width:768px)" type="image/png"/>       
-                <source srcset="./images/mobile/Display-x1/mobile-icecream2-x1.png 1x, 
-                ./images/mobile/Display-x2/mobile-icecream2-x2.png 2x" 
+                <source srcset="./images/mobile/Display-x1/mobi-icecream2-x1.png 1x, 
+                ./images/mobile/Display-x2/mobi-icecream2-x2.png 2x" 
                 media="(max-width:767px)" type="image/png"/>
-                <img class="products-list__image" src="./images/mobile/Display-x1/mobile-icecream2-x1.png" width="249" height="252" alt="ice cream">
+                <img class="products-list__image" src="./images/mobile/Display-x1/mobi-icecream2-x1.png" width="249" height="252" alt="ice cream">
             </picture>
                 
             <div class="products-list__description">
@@ -81,9 +81,9 @@
                 ./images/tablet/display-2x/tablet-icecream3-x2.png 2x"
                 media="(min-width:768px)" type="image/png"/>       
                 <source srcset="./images/mobile/Display-x1/mobi-icecream3-x1.png 1x, 
-                ./images/mobile/Display-x2/mobile-icecream3-x2.png 2x" 
+                ./images/mobile/Display-x2/mobi-icecream3-x2.png 2x" 
                 media="(max-width:767px)" type="image/png"/>
-                <img class="products-list__image" src="./images/mobile/Display-x1/mobile-icecream3-x1.png" width="249" height="252" alt="ice cream">
+                <img class="products-list__image" src="./images/mobile/Display-x1/mobi-icecream3-x1.png" width="249" height="252" alt="ice cream">
             </picture>
              
             <div class="products-list__description">
