--- a/src/partials/main-modal.html
+++ b/src/partials/main-modal.html
@@ -9,35 +9,35 @@
         
         <form class="main-modal__modal-form">
             <Label class="modal-form__label">
-                <div class="form-label__container"><svg class="modal-form__icon modal-icon" width="18" height="18">
+                <span class="form-label__container"><svg class="modal-form__icon modal-icon" width="18" height="18">
                         <use href=""></use>
                     </svg><span class="form-label-name">Name</span>
                     <span class="modal-form__container-input"><input type="text" name="username" class="modal-form__input"
                             autofocus  minlength="3" placeholder=" "></span>
-                </div>
+                </span>
             </Label>  
             <Label class="modal-form__label">
-                <div class="form-label__container"><svg class="modal-form__icon modal-icon" width="18" height="18">
+                <span class="form-label__container"><svg class="modal-form__icon modal-icon" width="18" height="18">
                         <use href=""></use>
                     </svg> </svg><span class="form-label-name">Phone</span>
                     <span class="modal-form__container-input"><input type="tel" name="phone_number"
                             class="modal-form__input" minlength="3" placeholder=" "></span>
-                </div>
+                </span>
             </Label>
             <Label class="modal-form__label">
-                <div class="form-label__container"><svg class="modal-form__icon modal-icon" width="18" height="18">
+                <span class="form-label__container"><svg class="modal-form__icon modal-icon" width="18" height="18">
                         <use href=""></use>
                     </svg> </svg><span class="form-label-name">Email</span>
                     <span class="modal-form__container-input"><input type="email" mame="email"
                             class="modal-form__input"  minlength="3" placeholder=" "></span>
-                </div>
+                </span>
             </Label>
             <label class="modal-form__textarea modal-form__label">Coments
                 <textarea name="feedback" rows="5"  placeholder="Enter text"
                     class="modal-form__input form-textarea-input"></textarea>
             </label>
             <label class="modal-form__label-check">
-                <div class="label-checkbox-container">
+                <span class="label-checkbox-container">
                     <input type="checkbox"
                         class="modal-form__checkbox-hidden visually-hidden">
                     <span class="modal-form__checkbox-icon modal-icon">
@@ -48,7 +48,7 @@
                         <a href="" class="modal-form__link link">
                             Terms of an agreement
                     </a>
-                </div> 
+                </span> 
             </label>
             <button type="submit" class="modal__button-submit main-button">Отправить</button>
      </form>
