--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,47 +1,122 @@
 <section class="try__6">
 <div class="container-gallery container ">
        <!-- <picture>-->
-            <!-- <source  srcset="images/mobile/Display-x1/mobi-gallery-x1.jpg 1x, images/mobile/Display-x1/mobi-gallery-x2.jpg 2x" media="(max-width: 767px)"> -->
-            <!-- <source  srcset=" 1x, .jpg 2x" media="(max-width: 1199px)">
-            <source  srcset=".jpg 1x, .jpg 2x" media="(min-width: 1200px)"> -->
+            <!-- <source  srcset="images/mobile/Display-/mobi-gallery--mini.jpg 1x, images/mobile/Display-/mobi-gallery-x2-mini.jpg 2x" media="(max-width: 767px)"> -->
+            <!-- <source  srcset=" 1x, -mini.jpg 2x" media="(max-width: 1199px)">
+            <source  srcset="-mini.jpg 1x, -mini.jpg 2x" media="(min-width: 1200px)"> -->
            <!-- <img src="" width="364" height="122" alt="галерея" class="gallery-main-img">
         </picture> -->
        
 
         <div class="gallery-group">
+
             <div class="gallery-group__item">
                 <picture>
-                    <source  srcset="" media="(max-width: 767px)"> 
-                    <source  srcset="./images/gallery/x1/cream1-1280-720.jpg x1" media="(max-width: 1199px)">
-                    <source  srcset="" media="(min-width: 1200px)"> 
-                    <img src="./images/gallery/x1/cream1-1280-720.jpg" width="1280" height="" alt="галерея" class="gallery-main-img1">
+                    <!--<source  srcset="" media="(max-width: 767px)">--> 
+                    <source  srcset="./images/gallery/gallery-tab-650-(8).jpg 1х"  media="(max-width: 1199px)">
+                   <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                    <img src="./images/gallery/gallery-tab-650-(8).jpg" width="650" alt="галерея" class="gallery-main-img1">
                 </picture>
             </div>
+            
             <div class="gallery-group__item">
                 <picture>
-                    <source  srcset="" media="(max-width: 767px)"> 
-                    <source  srcset="./images/gallery/x1/cream2-569.jpg x1" media="(max-width: 1199px)">
-                    <source  srcset="" media="(min-width: 1200px)"> 
-                    <img src="./images/gallery/x1/cream2-569.jpg" width="569" height="" alt="галерея" class="gallery-main-img1">
+                    <!--<source  srcset="" media="(max-width: 767px)">--> 
+                    <source  srcset="./images/gallery/gallery-tab-771-(10).jpg 1х"  media="(max-width: 1199px)">
+                   <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                    <img src="./images/gallery/gallery-tab-771-(10).jpg" width="771" alt="галерея" class="gallery-main-img1">
                 </picture>
-            </div>    
-        </div>
-        <div class="gallery-group__item">
+            </div>
+            
+            <div class="gallery-group__item">
+                <picture>
+                    <!--<source  srcset="" media="(max-width: 767px)">--> 
+                    <source  srcset="./images/gallery/gallery-1280(2)-min.jpg 1х" media="(max-width: 1199px)">
+                   <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                    <img src="./images/gallery/gallery-1280(2)-min.jpg" width="1280" alt="галерея" class="gallery-main-img1">
+                </picture>
+            </div> 
+
+          <div class="gallery-group__item">
             <picture>
-                <source  srcset="" media="(max-width: 767px)"> 
-                <source  srcset="./images/gallery/x1/cream18-1280.jpg x1" media="(max-width: 1199px)">
-                <source  srcset="" media="(min-width: 1200px)"> 
-                <img src="./images/gallery/x1/cream18-1280.jpg" width="1280" height="" alt="галерея" class="gallery-main-img1">
+                <!--<source  srcset="" media="(max-width: 767px)">--> 
+                <source  srcset="./images/gallery/gallery-1280(3)-min.jpg 1х"  media="(max-width: 1199px)">
+               <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                <img src="./images/gallery/gallery-1280(3)-min.jpg" width="1280" alt="галерея" class="gallery-main-img1">
+            </picture>
+          </div>
+  
+          <div class="gallery-group__item">
+            <picture>
+                <!--<source  srcset="" media="(max-width: 767px)">--> 
+                <source  srcset="./images/gallery/gallery-700-min.jpeg 1х"  media="(max-width: 1199px)">
+               <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                <img src="./images/gallery/gallery-700-min.jpeg" width="700" alt="галерея" class="gallery-main-img1">
+            </picture>
+          </div>
+
+          <div class="gallery-group__item">
+            <picture>
+                <!--<source  srcset="" media="(max-width: 767px)">--> 
+                <source  srcset="./images/gallery/gallery-1280(7)-min.jpg 1х"  media="(max-width: 1199px)">
+               <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                <img src="./images/gallery/gallery-1280(7)-min.jpg" width="1280" alt="галерея" class="gallery-main-img1">
             </picture>
         </div>
+          
         <div class="gallery-group__item">
             <picture>
-                <source  srcset="" media="(max-width: 767px)"> 
-                <source  srcset="./images/gallery/x1/cream2-569.jpg x1" media="(max-width: 1199px)">
-                <source  srcset="" media="(min-width: 1200px)"> 
-                <img src="./images/gallery/x1/cream2-569.jpg" width="569" height="" alt="галерея" class="gallery-main-img1">
+                <!--<source  srcset="" media="(max-width: 767px)">--> 
+                <source  srcset="./images/gallery/gallery-1280(4)-min.jpg 1х"  media="(max-width: 1199px)">
+               <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                <img src="./images/gallery/gallery-1280(4)-min.jpg" width="1280" alt="галерея" class="gallery-main-img1">
             </picture>
-        </div>    
+        </div>
+            
+        <div class="gallery-group__item">
+            <picture>
+                <!--<source  srcset="" media="(max-width: 767px)">--> 
+                <source  srcset="./images/gallery/gallery-2-569-min.jpg 1х"  media="(max-width: 1199px)">
+               <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                <img src="./images/gallery/gallery-2-569-min.jpg" width="559" alt="галерея" class="gallery-main-img1">
+            </picture>
+        </div>
+        
+          <div class="gallery-group__item">
+              <picture>
+                  <!--<source  srcset="" media="(max-width: 767px)">--> 
+                  <source  srcset="./images/gallery/gallery-1280-1-min.jpg 1х"  media="(max-width: 1199px)">
+                 <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                  <img src="./images/gallery/gallery-1280-1-min.jpg" width="1280" alt="галерея" class="gallery-main-img1">
+              </picture>
+           </div>
+
+             <div class="gallery-group__item">
+                  <picture>
+                      <!--<source  srcset="" media="(max-width: 767px)">--> 
+                      <source  srcset="./images/gallery/gallery-1280(6)-min.jpg 1х" media="(max-width: 1199px)">
+                     <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                      <img src="./images/gallery/gallery-1280(6)-min.jpg" width="1280" alt="галерея" class="gallery-main-img1">
+                  </picture>
+              </div>    
+            
+             <div class="gallery-group__item">
+                 <picture>
+                     <!--<source  srcset="" media="(max-width: 767px)">--> 
+                     <source  srcset="./images/gallery/gallery-tab-800-(5).jpg 1х"  media="(max-width: 1199px)">
+                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                     <img src="./images/gallery/gallery-tab-800-(5).jpg" width="800" alt="галерея" class="gallery-main-img1">
+                 </picture>
+             </div>
+   
+             <div class="gallery-group__item">
+                 <picture>
+                     <!--<source  srcset="" media="(max-width: 767px)">--> 
+                     <source  srcset="./images/gallery/gallery-tab-860-(12).jpg 1х"  media="(max-width: 1199px)">
+                    <!-- <source  srcset="" media="(min-width: 1200px)"> --> 
+                     <img src="./images/gallery/gallery-tab-860-(12).jpg" width="860" alt="галерея" class="gallery-main-img1">
+                 </picture>
+             </div>    
     </div>
 </div>
 </section>
