--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -47,6 +47,7 @@
         --backdrop-background: rgba(255, 0, 0, 0.151);
         --background-label:  rgba(47, 48, 58, 0.8);
         --border-button: rgba(73, 19, 3, 0.8);
+        --border-button1: rgba(32, 12, 6, 0.767);
         --background-main-modal: #FFFFFF;
         --box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         --mn-modal-border-btn-close: 1px solid rgba(189, 0, 0, 0.2);
