--- a/src/partials/main-modal.html
+++ b/src/partials/main-modal.html
@@ -1,6 +1,7 @@
-<div class="main-backdrop is-hidden " data-mainmodal>
-    <div class="main-modal">
-        <button type="button" class="main-modal__button_close" width="30" height="30" data-mainmodal-close><svg
+<div class="modal is-hidden " data-mainmodal>
+    <div class="modal__view">
+        <button type="button" class="modal__close" width="30" height="30" data-mainmodal-close>
+            <svg
                 class="button-close__icon modal-icon" width="18" height="18">
                 <use href="./images/sprite.svg#icon-close-black-18dp-2-1-1"></use>
             </svg>
@@ -9,7 +10,8 @@
         
         <form class="main-modal__modal-form">
             <Label class="modal-form__label">
-                <div class="form-label__container"><svg class="modal-form__icon modal-icon" width="18" height="18">
+                <div class="form-label__container">
+                    <svg class="modal-form__icon modal-icon" width="18" height="18">
                         <use href="./images/sprite.svg#icon-person-black-18dp-1"></use>
                     </svg><span class="form-label-name">Name</span>
                     <span class="modal-form__container-input"><input type="text" name="username" class="modal-form__input"
@@ -17,25 +19,34 @@
                 </div>
             </Label>  
             <Label class="modal-form__label">
-                <div class="form-label__container"><svg class="modal-form__icon modal-icon" width="18" height="18">
+                <div class="form-label__container">
+                    <svg class="modal-form__icon modal-icon" width="18" height="18">
                         <use href="./images/sprite.svg#icon-mobile"></use>
-                    </svg> </svg><span class="form-label-name">Phone</span>
+                    </svg><span class="form-label-name">Phone</span>
                     <span class="modal-form__container-input"><input type="tel" name="phone_number"
                             class="modal-form__input" minlength="3" placeholder=" "></span>
                 </div>
             </Label>
             <Label class="modal-form__label">
-                <div class="form-label__container"><svg class="modal-form__icon modal-icon" width="18" height="18">
-                        <use href="./images/sprite.svg#icon-email-black-18dp-1"></use>
-                    </svg><span class="form-label-name">Email</span>
+                <div class="form-label__container">
+                    <svg class="modal-form__icon modal-icon" width="18" height="18">
+                        <use href="./images/sprite.svg#icon-location2"></use>
+                    </svg><span class="form-label-name">Your address</span>
                     <span class="modal-form__container-input"><input type="email" mame="email"
                             class="modal-form__input"  minlength="3" placeholder=" "></span>
                 </div>
             </Label>
-            <label class="modal-form__textarea modal-form__label">Coments
+            <select size="3" multiple name="hero[]" class="modal-form__textarea">
+                <option disabled>Product selection</option>
+                <option value="Чебурашка">ice cream</option>
+                <option selected value="Крокодил Гена">ice coffee</option>
+                <option value="Шапокляк">milkshakes</option>
+                <option value="Крыса Лариса">ice cream blue</option>
+            </select>
+            <!-- <label class="modal-form__textarea modal-form__label">Coments
                 <textarea name="feedback" rows="5"  placeholder="Enter text"
                     class="modal-form__input form-textarea-input"></textarea>
-            </label>
+            </label> -->
             <label class="modal-form__label-check">
                 <span class="label-checkbox-container">
                     <input type="checkbox"
@@ -50,7 +61,7 @@
                     </span>
                 </span> 
             </label>
-            <button type="submit" class="modal__button-submit main-button">Submit</button>
+            <button type="submit" class="modal__button-submit main-button">to order</button>
      </form>
 
     </div>
