--- a/src/sass/_main-modal.scss
+++ b/src/sass/_main-modal.scss
@@ -9,65 +9,7 @@
     transition-timing-function: var(--timing-function);
   }
 }
-
-  /* styles-main-modal **************/ 
-.main-modal {
-  position: absolute;
-  display: block;
-    z-index: 1;
-    top: 50%;
-    left: 50%;
-    padding: 40px;
-    transform: translate(-50%, -50%);
-    cursor: auto;
-    background: var(--background-main-modal);
-    box-shadow: var(--box-shadow);
-    border-radius: 10px;
-        @media (max-width: 325px){
-        position: none;
-        min-width: 100%;
-        padding: 15px;
-        }
-        @media (max-width: 479px){
-          min-width: 80%;
-          height: 560px;
-          padding: 30px;
-          }
-        @media (max-width: 580px){
-         
-          min-width: 80%;
-          height: 609px;
-        }   
-        @media (min-width: 768px){
-          min-width: 450px;
-          height: 609px;
-        }   
-        @media (min-width: 1200px){
-          min-width: 528px;
-          height: 581px;
-        }} 
-
-  .main-modal__button_close {
-    display: flex; 
-    justify-content: center;
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background: inherit;
-    border: var(--mn-modal-border-btn-close);
-    cursor: pointer;
-    transition-property: fill, box-shadow, background-color;
-    transition-duration: 250ms;
-    transition-timing-function: var(--timing-function);
-    &:hover,
-    &:focus {
-      box-shadow: var(--box-shadow-card);
-    }
-  }
-  
+ 
   .button-close__icon {
     display: block;
     align-self: center;
@@ -177,6 +119,17 @@
   
   .modal-form__textarea {
     margin-bottom: 20px;
+    margin-top: 20px;
+    width: 100%;
+    border: var(--mn-modal-border-input);
+    color: var(--main-title-color);
+    padding-left: 40px;
+    padding-right: 40px;
+    &:hover,
+    &:focus {
+      border-color: var(--accent-color-mod2);
+      
+  }
   }
   
   .form-textarea-input {
