--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -26,6 +26,6 @@
 @import './footer';
 @import './main-modal';
 @import './modal-footer';
-@import './backdrop';
+@import './modals';
 @import './modal-location';
 
