Додала анімацію і якорні ссилки на секції

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -14,14 +14,18 @@
       <li class="header-list__item">
         <a href="./index.html" class="link header-list__link header-list__link--current">Home</a>
       </li>
-      <li class="header-list__item"><a href="#" class="link header-list__link">About us</a></li>
       <li class="header-list__item">
-        <a href="#" class="link header-list__link">How it’s made?</a>
+        <a href="#reviews" class="link header-list__link">About us</a>
       </li>
       <li class="header-list__item">
-        <a href="#" class="link header-list__link">Our products</a>
+        <a href="#about" class="link header-list__link">How it’s made?</a>
       </li>
-      <li class="header-list__item"><a href="#" class="link header-list__link">Contact</a></li>
+      <li class="header-list__item">
+        <a href="#products" class="link header-list__link">Our products</a>
+      </li>
+      <li class="header-list__item">
+        <a href="#contacts" class="link header-list__link">Contact</a>
+      </li>
     </ul>
   </nav>
   <button
