--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -42,16 +42,16 @@
       </h1>
       <ul class="hero__list list">
         <li class="hero__item">
-          <a href="#" class="hero__link hero__link--products link">Products</a>
+          <a href="#products" class="hero__link hero__link--products link">Products</a>
         </li>
 
         <li class="hero__item">
-          <a href="#" class="hero__link hero__link--made link">How it’s made?</a>
+          <a href="#about" class="hero__link hero__link--made link">How it’s made?</a>
         </li>
       </ul>
     </div>
     <div class="hero-info">
-      <picture>
+      <picture class="hero-info__picture">
         <source
           srcset="
             ./images/tablet/display-x1/tablet-milk-x1.png 1x,
