mobi меню якорные ссылки, нав.

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,6 @@
-<section class="products container">
+
+    <section  class="products container" id="products">
+        
     <p class="products__text">100% natural</p>
     <h2 class="products__heading">products</h2>
     <ul class="products-list list">
