--- a/src/partials/mobi-menu.html
+++ b/src/partials/mobi-menu.html
@@ -11,25 +11,25 @@
             <use href="./images/sprite.svg#icon-next2"></use>
         </svg>
     </button>
-    <div>
+    <nav>
         <ul class="mobile-menu__list list">
             <li class="mobile-menu__item">
-                <a href="" class="mobile-menu__link link current">Home</a>
+                <a href="/index.html" class="mobile-menu__link link current">Home</a>
             </li>
             <li class="mobile-menu__item">
-                <a href="" class="mobile-menu__link link">About us</a>
+                <a href="/index.html" class="mobile-menu__link link">About us</a>
             </li>
             <li class="mobile-menu__item">
-                <a href="" class="mobile-menu__link link">How it’s made?</a>
+                <a href="/#about" class="mobile-menu__link link">How it’s made?</a>
+            </li>
+            <li class="mobile-menu__item ">
+                <a href="/#products" class="mobile-menu__link link ">Our products</a>
             </li>
             <li class="mobile-menu__item">
-                <a href="" class="mobile-menu__link link">Our products</a>
-            </li>
-            <li class="mobile-menu__item">
-                <a href="" class="mobile-menu__link link">Contact</a>
+                <a href="/#contacts" class="mobile-menu__link link ">Contact</a>
             </li>
         </ul>
-    </div>
+    </nav>
 </div>
    
     <!--<script defer src="/menu.js"></script>-->
