--- a/src/partials/main-modal.html
+++ b/src/partials/main-modal.html
@@ -6,47 +6,44 @@
                 <use href="./images/sprite.svg#icon-close-black-18dp-2-1-1"></use>
             </svg>
         </button>
-        <p class="main-modal__title ">Leave your details,<span class="modal-title__text"> we will call you back</span></p>
+        <p class="main-modal__title ">Leave your details,<span class="modal-title__text"> wait for the goods</span></p>
         
         <form class="main-modal__modal-form">
             <Label class="modal-form__label">
-                <div class="form-label__container">
+                <span class="form-label__container">
                     <svg class="modal-form__icon modal-icon" width="18" height="18">
                         <use href="./images/sprite.svg#icon-person-black-18dp-1"></use>
                     </svg><span class="form-label-name">Name</span>
                     <span class="modal-form__container-input"><input type="text" name="username" class="modal-form__input"
                             autofocus  minlength="3" placeholder=" "></span>
-                </div>
+                </span>
             </Label>  
             <Label class="modal-form__label">
-                <div class="form-label__container">
+                <span class="form-label__container">
                     <svg class="modal-form__icon modal-icon" width="18" height="18">
                         <use href="./images/sprite.svg#icon-mobile"></use>
                     </svg><span class="form-label-name">Phone</span>
                     <span class="modal-form__container-input"><input type="tel" name="phone_number"
                             class="modal-form__input" minlength="3" placeholder=" "></span>
-                </div>
+                </span>
             </Label>
             <Label class="modal-form__label">
-                <div class="form-label__container">
+                <span class="form-label__container">
                     <svg class="modal-form__icon modal-icon" width="18" height="18">
                         <use href="./images/sprite.svg#icon-location2"></use>
                     </svg><span class="form-label-name">Your address</span>
-                    <span class="modal-form__container-input"><input type="email" mame="email"
-                            class="modal-form__input"  minlength="3" placeholder=" "></span>
-                </div>
+                    <span class="modal-form__container-input"><input type="addres" mame="addres"
+                            class="modal-form__input"  minlength="3" placeholder=""></span>
+                </span>
             </Label>
             <select size="3" multiple name="hero[]" class="modal-form__textarea">
                 <option disabled>Product selection</option>
-                <option value="Чебурашка">ice cream</option>
-                <option selected value="Крокодил Гена">ice coffee</option>
-                <option value="Шапокляк">milkshakes</option>
-                <option value="Крыса Лариса">ice cream blue</option>
+                <option value="ice cream">ice cream</option>
+                <option selected value="ice coffee">ice coffee</option>
+                <option value="milkshakes">milkshakes</option>
+                <option value="ice cream blue">ice cream blue</option>
             </select>
-            <!-- <label class="modal-form__textarea modal-form__label">Coments
-                <textarea name="feedback" rows="5"  placeholder="Enter text"
-                    class="modal-form__input form-textarea-input"></textarea>
-            </label> -->
+            
             <label class="modal-form__label-check">
                 <span class="label-checkbox-container">
                     <input type="checkbox"
