your phone number

--- a/src/partials/modal-footer.html
+++ b/src/partials/modal-footer.html
@@ -10,17 +10,17 @@
     <p class="call-back">Become our partner</p>
     <div class="form-modak_content">
         <label class="modal-lable momble-mod">Name
-            <input class="modal-form__input" type="text" name="name" placeholder="Name*" required minlength="4">  
+            <input required class="modal-form__input" type="text" name="name" placeholder="Name*" required minlength="4">  
         </label>
         <label  class="modal-lable momble-mod">Surname
-            <input class="modal-form__input" type="text" name="Surname" placeholder="Surname*" required minlength="4">    
+            <input required class="modal-form__input" type="text" name="Surname" placeholder="Surname*" required minlength="4">    
         </label>
     </div>
     <label  class="modal-lable">Tel
-        <input class="modal-form__input" type="text" name="tel" placeholder="Tel*" required minlength="4" pattern="^(\s*)?(\+)?([- _():=+]?\d[- _():=+]?){10,14}(\s*)?$">
+        <input required class="modal-form__input" type="text" name="tel" placeholder="Tel*" required minlength="4" pattern="^(\s*)?(\+)?([- _():=+]?\d[- _():=+]?){10,14}(\s*)?$">
     </label>
     <label  class="modal-lable">Email
-        <input class="modal-form__input" type="text" name="email" placeholder="Email" required minlength="4">
+        <input required class="modal-form__input" type="text" name="email" placeholder="Email" required minlength="4">
     </label>
 
     <label for="coments" class="modal-lable" required minlength="4">Coments 
