--- a/src/partials/modal-about.html
+++ b/src/partials/modal-about.html
@@ -9,9 +9,9 @@
         <p  class="modal-about__text"> The main advantage of consuming dairy products is their ability to have a beneficial effect on the intestinal microflora. They also contain calcium and vitamin D, which strengthen bones and prevent the development of cancerous tumors. The
         most valuable source of health is milk.              If you want to know more about our products, please leave a request.</p>        
         <form action="#" class="modal-about-form">  
-            <label for="input-tel" class="modal-about-form-field__label">Телефон для обратного звонка</label>
+            <label for="input-tel" class="modal-about-form-field__label">Your phone number</label>
             <span class="input3-wrapper">
-                <input type="tel" name="modal-tel" id="input-tel" class="modal-about-form-field__input" placeholder=" +38 (067) 000 00 00" >                    
+                <input required type="tel" name="modal-tel" id="input-tel" class="modal-about-form-field__input" placeholder=" +38 (067) 000 00 00" >                    
             </span>                                       
             <button type="submit" class="form3-btn" >Call back
             <svg class="modal-about-form-field__icon" width="18" height="18">
