--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -15,7 +15,17 @@
   color: var(--pre-title-color);
 
   margin-bottom: 15px;
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+    line-height: calc(30 / 26);
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 30px;
+    line-height: calc(34 / 30);
+    letter-spacing: 0.04em;
+  }
 }
+
 @media screen and (max-width: 767px) {
   .products-list__text--tablet {
     display: none;
@@ -89,7 +99,7 @@
     @media screen and (min-width: 768px) {
       top: 205px;
     }
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 1200px) {
       top: 229px;
     }
   }
@@ -142,6 +152,12 @@
   margin-bottom: 30px;
   @media screen and (min-width: 768px) {
     margin-bottom: 40px;
+    line-height: calc(25 / 14);
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 62px;
+    font-size: 16px;
+    line-height: calc(28 / 16);
   }
 }
 .products-list__image {
@@ -150,7 +166,7 @@
   @media screen and (min-width: 768px) {
     height: 233px;
     width: 220px;
-    margin: -102px auto 0px auto;
+    margin: -111px auto 0px auto;
   }
   @media screen and (min-width: 1200px) {
     height: 335px;
@@ -187,6 +203,8 @@
   margin-bottom: 66px;
   @media screen and (min-width: 1200px) {
     margin-bottom: 70px;
+    font-size: 30px;
+    line-height: calc(34 / 30);
   }
 }
 
