--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,7 +9,7 @@
       height="50"
     />
   </a>
-  <nav class="header-nav">
+  <nav class="header-nav yacor">
     <ul class="list header-list">
       <li class="header-list__item">
         <a href="./index.html" class="link header-list__link header-list__link--current">Home</a>
