--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -40,7 +40,7 @@
         ice cream made with
         <span class="hero__title--accent">passion</span>
       </h1>
-      <ul class="hero__list list">
+      <ul class="hero__list list yacor">
         <li class="hero__item">
           <a href="#products" class="hero__link hero__link--products link">Products</a>
         </li>
