--- a/src/partials/mobi-menu.html
+++ b/src/partials/mobi-menu.html
@@ -12,7 +12,7 @@
         </svg>
     </button>
     <nav>
-        <ul class="mobile-menu__list list">
+        <ul class="mobile-menu__list list yacor ">
             <li class="mobile-menu__item">
                 <a href="/index.html" class="mobile-menu__link link current">Home</a>
             </li>
