--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,5 @@
 <!-- Секция герой -->
-<section class="hero">
+<section id="heroy" class="hero">
   <div class="container hero__container">
     <div class="hero-image__thumb">
       <picture class="hero-image">
