--- a/src/partials/mobi-menu.html
+++ b/src/partials/mobi-menu.html
@@ -12,12 +12,12 @@
         </svg>
     </button>
     <nav>
-        <ul class="mobile-menu__list list yacor ">
+        <ul class="mobile-menu__list list yacor">
             <li class="mobile-menu__item">
-                <a href="/index.html" class="mobile-menu__link link current">Home</a>
+                <a href="#heroy" class="mobile-menu__link link current">Home</a>
             </li>
             <li class="mobile-menu__item">
-                <a href="/index.html" class="mobile-menu__link link">About us</a>
+                <a href="#heroy" class="mobile-menu__link link">About us</a>
             </li>
             <li class="mobile-menu__item">
                 <a href="#about" class="mobile-menu__link link">How it’s made?</a>
