добавление последнего коментария

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -160,16 +160,18 @@
             </div>
 
             <div class="reviews__slide">
-                <img class="reviews__img" src="./images/testimonials.jpg" alt="photo">
+                <img class="reviews__img" src="./images/reviews/anton-min.jpg" alt="photo">
                 <div class="container-comment">
-                    <article class="comment">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem.</article>
+                    <article class="comment">Разрабатывал секцию "Gallery" и основное
+                    модальное окно. В проекте использовал такие технологи: html, CSS, Animate CSS, сборщик NPM, node.js, с
+                    помощью таких утилит: VSCode, Git/GitHub, Figma.</article>
                     <div class="gradient">
                     </div>
                 </div>
 
                 <div class="slide-p">
                     <p>
-                        Emily, Los Angeles
+                        Антон, Кривой Рог
                     </p>
                 </div>
             </div>
