--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -66,7 +66,7 @@
             <div class="reviews__slide">
                 <img class="reviews__img" src="./images/reviews/natalia-min.jpg" alt="photo">
                 <div class="container-comment">
-                    <article class="comment"><span class="before">Мобильное</span> меню должно быть не только красивым, но и правильно отображаться на разных устройствах.</article>
+                    <article class="comment">Сделала мобильное меню и карточки товара. Рада быть частью этой замечательной команды!</article>
                     <div class="gradient">
                     </div>
                 </div>
